--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -36,6 +37,7 @@
         <div class="menu-links">
           <ul>
             <li><a href="#about" onclick="toggleMenu()">About</a></li>
+            <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
             <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
             <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
             <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
@@ -137,6 +139,34 @@
               intuitive experiences that users love. I'm passionate about
               writing clean, maintainable code, learning new technologies, and
               staying updated with industry best practices.
+            </p>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+      />
+    </section>
+    <section id="experience">
+      <p class="section__text__p1">Explore My</p>
+      <h1 class="title">Experience</h1>
+      <div class="section-container">
+        <div class="about-details-container">
+          <div class="text-container">
+            <p>
+              I'm a passionate Flutter and Full-Stack Developer with practical
+              experience building responsive mobile and web applications. I’ve
+              worked on real-world projects using Flutter/Dart and the MERN
+              stack, focusing on clean architecture, UI/UX design, and
+              performance optimization. At ERE Business Solutions, I contributed
+              to scalable mobile apps and collaborated closely with engineers
+              and designers. During my internship at Luminar Technolab, I gained
+              hands-on experience in both Android and web development,
+              integrating APIs and Firebase to build smooth, dynamic user
+              experiences.
             </p>
           </div>
         </div>
@@ -469,7 +499,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/FathimaShahala/e-book'"
               >
                 Github
               </button>
@@ -593,6 +623,7 @@
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
