--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/FATHIMA SHAHALA_resume.pdf')"
+            onclick="window.open('./assets/FATHIMA SHAHALA_cv.pdf')"
           >
             Download CV
           </button>
